# Concurrent-Programming

./: .gitignore  CMakeLists.txt  main.cpp
Dining Philosophers Problem/: dining_philosophers.cpp  dining_philosophers.h
Readers-Writers Problem/: readers_writers.cpp  readers_writers.h
WiTi Problem/: WiTi.cpp  WiTi.h
